src/com/timelight/logstash/parser/logstash_confParser.java
// Generated from logstash_conf.g4 by ANTLR 4.4

    package com.timelight.logstash.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class logstash_confParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__32=1, T__31=2, T__30=3, T__29=4, T__28=5, T__27=6, T__26=7, T__25=8, 
		T__24=9, T__23=10, T__22=11, T__21=12, T__20=13, T__19=14, T__18=15, T__17=16, 
		T__16=17, T__15=18, T__14=19, T__13=20, T__12=21, T__11=22, T__10=23, 
		T__9=24, T__8=25, T__7=26, T__6=27, T__5=28, T__4=29, T__3=30, T__2=31, 
		T__1=32, T__0=33, NEWLINE=34, WS=35, QUOTED_LITERAL=36, ID=37, DIGIT=38, 
		INT=39;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'input'", "'in'", "','", "'or'", "'['", "'-'", "'not'", 
		"'('", "'if'", "'<'", "'!='", "'<='", "'''", "'{'", "'and'", "'else'", 
		"'}'", "'!~'", "'nand'", "'xor'", "')'", "'=>'", "'.'", "'=~'", "'>'", 
		"'output'", "'/'", "'=='", "'#'", "'>='", "'filter'", "'!'", "NEWLINE", 
		"WS", "QUOTED_LITERAL", "ID", "DIGIT", "INT"
	};
	public static final int
		RULE_config = 0, RULE_filler = 1, RULE_comment = 2, RULE_plugin_section = 3, 
		RULE_plugin_type = 4, RULE_branch_or_plugin = 5, RULE_branch = 6, RULE_plugin = 7, 
		RULE_attributes = 8, RULE_attribute = 9, RULE_r_if = 10, RULE_else_if = 11, 
		RULE_r_else = 12, RULE_name = 13, RULE_string = 14, RULE_single_quoted_string = 15, 
		RULE_value = 16, RULE_number = 17, RULE_condition = 18, RULE_expression = 19, 
		RULE_array = 20, RULE_hash = 21, RULE_hashentries = 22, RULE_hashentry = 23, 
		RULE_boolean_operator = 24, RULE_negative_expression = 25, RULE_in_expression = 26, 
		RULE_not_in_expression = 27, RULE_rvalue = 28, RULE_selector = 29, RULE_compare_expression = 30, 
		RULE_regexp_expression = 31, RULE_selector_element = 32, RULE_in_operator = 33, 
		RULE_not_in_operator = 34, RULE_method_call = 35, RULE_regexp = 36, RULE_compare_operator = 37, 
		RULE_regexp_operator = 38;
	public static final String[] ruleNames = {
		"config", "filler", "comment", "plugin_section", "plugin_type", "branch_or_plugin", 
		"branch", "plugin", "attributes", "attribute", "r_if", "else_if", "r_else", 
		"name", "string", "single_quoted_string", "value", "number", "condition", 
		"expression", "array", "hash", "hashentries", "hashentry", "boolean_operator", 
		"negative_expression", "in_expression", "not_in_expression", "rvalue", 
		"selector", "compare_expression", "regexp_expression", "selector_element", 
		"in_operator", "not_in_operator", "method_call", "regexp", "compare_operator", 
		"regexp_operator"
	};

	@Override
	public String getGrammarFileName() { return "logstash_conf.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public logstash_confParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConfigContext extends ParserRuleContext {
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public Plugin_sectionContext plugin_section(int i) {
			return getRuleContext(Plugin_sectionContext.class,i);
		}
		public List<Plugin_sectionContext> plugin_section() {
			return getRuleContexts(Plugin_sectionContext.class);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitConfig(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_config);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78); filler();
			setState(79); plugin_section();
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(80); filler();
					setState(81); plugin_section();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(88); filler();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FillerContext extends ParserRuleContext {
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public List<TerminalNode> WS() { return getTokens(logstash_confParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(logstash_confParser.WS, i);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public FillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterFiller(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitFiller(this);
		}
	}

	public final FillerContext filler() throws RecognitionException {
		FillerContext _localctx = new FillerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_filler);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(92);
					switch (_input.LA(1)) {
					case T__3:
						{
						setState(90); comment();
						}
						break;
					case WS:
						{
						setState(91); match(WS);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(logstash_confParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(logstash_confParser.NEWLINE, i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); match(T__3);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__32) | (1L << T__31) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__25) | (1L << T__24) | (1L << T__23) | (1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__19) | (1L << T__18) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << WS) | (1L << QUOTED_LITERAL) | (1L << ID) | (1L << DIGIT) | (1L << INT))) != 0)) {
				{
				{
				setState(98);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104); match(NEWLINE);
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_sectionContext extends ParserRuleContext {
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Branch_or_pluginContext branch_or_plugin(int i) {
			return getRuleContext(Branch_or_pluginContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public List<Branch_or_pluginContext> branch_or_plugin() {
			return getRuleContexts(Branch_or_pluginContext.class);
		}
		public Plugin_typeContext plugin_type() {
			return getRuleContext(Plugin_typeContext.class,0);
		}
		public Plugin_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterPlugin_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitPlugin_section(this);
		}
	}

	public final Plugin_sectionContext plugin_section() throws RecognitionException {
		Plugin_sectionContext _localctx = new Plugin_sectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_plugin_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); plugin_type();
			setState(110); filler();
			setState(111); match(T__18);
			setState(112); filler();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << QUOTED_LITERAL) | (1L << ID))) != 0)) {
				{
				{
				setState(113); branch_or_plugin();
				setState(114); filler();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_typeContext extends ParserRuleContext {
		public Plugin_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterPlugin_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitPlugin_type(this);
		}
	}

	public final Plugin_typeContext plugin_type() throws RecognitionException {
		Plugin_typeContext _localctx = new Plugin_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_plugin_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__6) | (1L << T__1))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Branch_or_pluginContext extends ParserRuleContext {
		public PluginContext plugin() {
			return getRuleContext(PluginContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public Branch_or_pluginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch_or_plugin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterBranch_or_plugin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitBranch_or_plugin(this);
		}
	}

	public final Branch_or_pluginContext branch_or_plugin() throws RecognitionException {
		Branch_or_pluginContext _localctx = new Branch_or_pluginContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_branch_or_plugin);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(125); branch();
				}
				break;
			case QUOTED_LITERAL:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(126); plugin();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BranchContext extends ParserRuleContext {
		public List<Else_ifContext> else_if() {
			return getRuleContexts(Else_ifContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public R_ifContext r_if() {
			return getRuleContext(R_ifContext.class,0);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public Else_ifContext else_if(int i) {
			return getRuleContext(Else_ifContext.class,i);
		}
		public R_elseContext r_else() {
			return getRuleContext(R_elseContext.class,0);
		}
		public BranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitBranch(this);
		}
	}

	public final BranchContext branch() throws RecognitionException {
		BranchContext _localctx = new BranchContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_branch);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(129); r_if();
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130); filler();
					setState(131); else_if();
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(138); filler();
				setState(139); r_else();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PluginContext extends ParserRuleContext {
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public PluginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterPlugin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitPlugin(this);
		}
	}

	public final PluginContext plugin() throws RecognitionException {
		PluginContext _localctx = new PluginContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_plugin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); name();
			setState(144); filler();
			setState(145); match(T__18);
			setState(146); filler();
			setState(147); attributes();
			setState(148); filler();
			setState(149); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitAttributes(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attributes);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if (_la==QUOTED_LITERAL || _la==ID) {
				{
				setState(151); attribute();
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(152); filler();
						setState(153); attribute();
						}
						} 
					}
					setState(159);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); name();
			setState(163); filler();
			setState(164); match(T__10);
			setState(165); filler();
			setState(166); value();
			setState(167); filler();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_ifContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Branch_or_pluginContext branch_or_plugin(int i) {
			return getRuleContext(Branch_or_pluginContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public List<Branch_or_pluginContext> branch_or_plugin() {
			return getRuleContexts(Branch_or_pluginContext.class);
		}
		public R_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterR_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitR_if(this);
		}
	}

	public final R_ifContext r_if() throws RecognitionException {
		R_ifContext _localctx = new R_ifContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_r_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); match(T__23);
			setState(170); filler();
			setState(171); condition();
			setState(172); filler();
			setState(173); match(T__18);
			setState(174); filler();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << QUOTED_LITERAL) | (1L << ID))) != 0)) {
				{
				{
				setState(175); branch_or_plugin();
				setState(176); filler();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(183); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_ifContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Branch_or_pluginContext branch_or_plugin(int i) {
			return getRuleContext(Branch_or_pluginContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public List<Branch_or_pluginContext> branch_or_plugin() {
			return getRuleContexts(Branch_or_pluginContext.class);
		}
		public Else_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterElse_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitElse_if(this);
		}
	}

	public final Else_ifContext else_if() throws RecognitionException {
		Else_ifContext _localctx = new Else_ifContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_else_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); match(T__16);
			setState(186); filler();
			setState(187); match(T__23);
			setState(188); filler();
			setState(189); condition();
			setState(190); filler();
			setState(191); match(T__18);
			setState(192); filler();
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << QUOTED_LITERAL) | (1L << ID))) != 0)) {
				{
				{
				setState(193); branch_or_plugin();
				setState(194); filler();
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_elseContext extends ParserRuleContext {
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Branch_or_pluginContext branch_or_plugin(int i) {
			return getRuleContext(Branch_or_pluginContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public List<Branch_or_pluginContext> branch_or_plugin() {
			return getRuleContexts(Branch_or_pluginContext.class);
		}
		public R_elseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_else; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterR_else(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitR_else(this);
		}
	}

	public final R_elseContext r_else() throws RecognitionException {
		R_elseContext _localctx = new R_elseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_r_else);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); match(T__16);
			setState(204); filler();
			setState(205); match(T__18);
			setState(206); filler();
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << QUOTED_LITERAL) | (1L << ID))) != 0)) {
				{
				{
				setState(207); branch_or_plugin();
				setState(208); filler();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(215); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode ID() { return getToken(logstash_confParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof logstash_confListener ) ((logstash_confListener)listener).exitName(this);
		}
	}
